# create-package

./: .gitignore  CMakeLists.txt
cmake/: config.cmake.in  create-package.cmake
test/: CMakeLists.txt
test/executable/: CMakeLists.txt
test/executable/source/src/: main.cpp
test/header_only/: CMakeLists.txt
test/header_only/source/inc/gharveymn/: test-header-only.hpp
test/shared/: CMakeLists.txt
test/shared/source/src/: test-shared.cpp
test/static/: CMakeLists.txt
test/static/source/src/: test-static.cpp
